Updated by kodi-game-scripting
https://github.com/fetzerch/kodi-game-scripting/

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ project(game.libretro.beetle-bsnes)
 list(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR})
 
 find_package(Kodi REQUIRED)
-find_package(libretro-beetle-bsnes REQUIRED)
+find_library(BEETLE-BSNES_LIB NAMES mednafen_snes_libretro${CMAKE_SHARED_LIBRARY_SUFFIX} PATH_SUFFIXES libretro)
 
 set(BEETLE-BSNES_CUSTOM_BINARY ${BEETLE-BSNES_LIB}
     ${PROJECT_NAME}${CMAKE_SHARED_LIBRARY_SUFFIX})
