--- a/debian/control
+++ b/debian/control
@@ -4,7 +4,7 @@ Maintainer: wsnipex <wsnipex@a1.net>
 Build-Depends: debhelper (>= 9.0.0),
                cmake,
                kodi-addon-dev,
-               beetle-bsnes (>= 0.9.26)
+               libretro-beetle-bsnes (>= 0.9.26) | beetle-bsnes (>= 0.9.26)
 Standards-Version: 3.9.8
 Section: libs
 
