--- a/game.libretro.beetle-bsnes/addon.xml.in
+++ b/game.libretro.beetle-bsnes/addon.xml.in
@@ -17,6 +17,7 @@
 	<extension point="xbmc.addon.metadata">
 		<summary lang="en_GB">Nintendo - SNES / SFC (Beetle bsnes) v0.9.26</summary>
 		<description lang="en_GB">Beetle bSNES is the SNES module of Beetle, a fork of Mednafen. Mednafen&#39;s SNES module itself is a fork of bSNES v0.59.</description>
+		<disclaimer>In loving memory of Near / Byuu</disclaimer>
 		<license>GPLv2</license>
 		<platform>@PLATFORM@</platform>
 		<source>https://github.com/kodi-game/game.libretro.beetle-bsnes</source>
