--- a/game.libretro.beetle-bsnes/addon.xml.in
+++ b/game.libretro.beetle-bsnes/addon.xml.in
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <addon id="game.libretro.beetle-bsnes"
 		name="Nintendo - SNES / SFC (Beetle bsnes)"
-		version="0.9.26.15"
+		version="0.9.26.16"
 		provider-name="byuu, Mednafen Team">
 	<requires>
 		<import addon="game.libretro" version="1.0.0"/>
@@ -25,10 +25,10 @@
 			<screenshot>resources/screenshot-02.jpg</screenshot>
 			<screenshot>resources/screenshot-03.jpg</screenshot>
 		</assets>
-		<disclaimer>In loving memory of Near / Byuu</disclaimer>
 		<summary lang="en_GB">Nintendo - SNES / SFC (Beetle bsnes) v0.9.26</summary>
 		<description lang="en_GB">Beetle bSNES is the SNES module of Beetle, a fork of Mednafen. Mednafen&#39;s SNES module itself is a fork of bSNES v0.59.</description>
 		<description lang="ko_KR">비틀 bSNES는 Mednafen의 포크인 비틀의 SNES 모듈입니다. Mednafen의 SNES 모듈 자체는 bSNES v0.59의 포크입니다.</description>
 		<description lang="zh_CN">Beetle bSNES 是 Beetle 的 SNES 模块，是 Mednafen 的一个分支。Mednafen 的 SNES 模块本身又是 bSNES v0.59 的一个分支。</description>
+		<disclaimer lang="en_GB">In loving memory of Near / Byuu</disclaimer>
 	</extension>
 </addon>
