--- a/game.libretro.beetle-bsnes/addon.xml.in
+++ b/game.libretro.beetle-bsnes/addon.xml.in
@@ -25,7 +25,7 @@
 			<screenshot>resources/screenshot-02.jpg</screenshot>
 			<screenshot>resources/screenshot-03.jpg</screenshot>
 		</assets>
-		<summary lang="en_GB">Nintendo - SNES / SFC (Beetle bsnes) v0.9.26</summary>
+		<summary lang="en_GB">Nintendo - SNES / SFC (Beetle bsnes)</summary>
 		<description lang="da_DK">Beetle bSNES er SNES-modulet fra Beetle, en fork af Mednafen. Mednafens SNES-modul er i sig selv en fork af bSNES v0.59.</description>
 		<description lang="de_DE">Beetle bSNES ist das SNES-Modul von Beetle, einem Fork von Mednafen. Mednafens SNES-Modul selbst ist ein Fork von bSNES v0.59.</description>
 		<description lang="en_GB">Beetle bSNES is the SNES module of Beetle, a fork of Mednafen. Mednafen&apos;s SNES module itself is a fork of bSNES v0.59.</description>
